# Car-Rental-Pro

./: .gitignore  CMakeLists.txt  README.md
cmake/: SeedData.cmake
data/: cars.csv  customers.csv  invoices.csv  reservations.csv
src/: main.cpp
src/domain/: Customer.h  Invoice.h  Reservation.h  Vehicle.h  Vehicles.h
src/service/: RentalService.cpp  RentalService.h
src/storage/: FileManager.cpp  FileManager.h
src/ui/: MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h
src/ui/delegates/: NumericDelegate.h  StatusBadgeDelegate.cpp  StatusBadgeDelegate.h
src/ui/dialogs/: AddCarDialog.cpp  AddCarDialog.h  AddCustomerDialog.cpp  AddCustomerDialog.h  CustomerHistoryDialog.cpp  CustomerHistoryDialog.h  NewReservationDialog.cpp  NewReservationDialog.h  ReturnDialog.cpp  ReturnDialog.h
src/ui/tabs/: CarsTab.cpp  CarsTab.h  CustomersTab.cpp  CustomersTab.h  ReportsTab.cpp  ReportsTab.h  ReservationsTab.cpp  ReservationsTab.h  ReturnsTab.cpp  ReturnsTab.h
src/utils/: Date.cpp  Date.h  Exceptions.h  Validation.cpp  Validation.h
